--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Tommy Sarro</title>
+  <title>terryredherring</title>
 <body bgcolor="#0FFFFF">
 </body> 
 </html>
