--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ input {
   <div class="column">
 	<audio id="audio" src="MacintoshPlusAudio.mp3"></audio>
 	<div class='center'>
-		<video loop muted id="video" src="Dance.mp4"></video>
+		<video loop muted id="video" src="DanceNoAudio.mp4"></video>
 	</div>
   </div>
   
