--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ input {
 <input type="button" id="click" value="" onclick="play()">
 
 <marquee behavior="scroll" direction="right">
-	<b style="color:lightgreen;font-size:25px;"> /music plays/ </b>
+	<b style="color:lightgreen;font-size:25px;"> /music plays </b>
 </marquee>
 
 <script>
