--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ input {
   </div>
   
   <div class="column">
-	<audio id="audio" src="MacintoshPlusAudio.mp3"></audio>
+	<audio controls loop id="audio" src="MacintoshPlusAudio.mp3"></audio>
 	<div class='center'>
 		<video loop muted id="video" src="DanceNoAudio.mp4"></video>
 	</div>
