--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ input {
 <input type="button" id="click" value="" onclick="play()">
 
 <marquee behavior="scroll" direction="right">
-	<b style="color:lightgreen;font-size:25px;"> /music plays </b>
+	<b style="color:lightgreen;font-size:25px;"> /music plays/ </b>
 </marquee>
 
 <script>
@@ -66,7 +66,7 @@ input {
   </div>
   
   <div class="column">
-	<audio controls loop id="audio" src="MacintoshPlusAudio.mp3"></audio>
+	<audio loop id="audio" src="MacintoshPlusAudio.mp3"></audio>
 	<div class='center'>
 		<video loop muted id="video" src="DanceNoAudio.mp4"></video>
 	</div>
