--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ input {
   </div>
   
   <div class="column">
-	<audio id="audio" src="MacintoshPlusAudio.mp3"></audio>
+	<audio loop id="audio" src="MacintoshPlusAudio.mp3"></audio>
 	<div class='center'>
 		<video width=100% height=100% loop muted id="video" src="DanceNoAudio.mp4"></video>
 	</div>
