--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ input {
 <input type="button" id="click" value="" onclick="play()">
 
 <marquee behavior="alternate" direction="right" >
-	<b style="color:lightgreen;font-size:25px;"> /music plays! </b>
+	<b style="color:lightgreen;font-size:25px;"> /music plays </b>
 </marquee>
 
 <script>
